corrected overflow

--- a/sass/styles/elements/element.searchbox.scss
+++ b/sass/styles/elements/element.searchbox.scss
@@ -1,7 +1,7 @@
 .search-box {
   width: 100%;
   max-height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: absolute;
   z-index: 100;
   top: 55px;
